Clean up stray files, completed plans, and dev tooling
- Remove root-level data artifacts (lake_ids.csv, coastal outlets)
- Remove DEVELOPMENT_STATUS.md (superseded by CLAUDE.md)
- Remove completed plan docs (docs/plans/, 19 files)
- Remove stale inline docs (RECONSTRUCTION_SPEC, lint ANALYSIS/CHECKS)
- Remove stale facc tech docs (algorithm, summary)
- Remove duplicate requirements-reviewer.txt
- Move MATLAB reference scripts to src/_legacy/
- Move reviewer launch scripts to deploy/reviewer/
- Gitignore .claude/ and .dmux-hooks/ (dev tooling)

--- a/.gitignore
+++ b/.gitignore
@@ -228,3 +228,7 @@ DrainageAreaFix/
 *.duckdb
 !tests/sword_duckdb/fixtures/sword_test_minimal.duckdb
 .dmux/
+
+# Dev tooling (per-developer)
+.claude/
+.dmux-hooks/
