docs: clean up facc methodology for colleague review
- Condense Section 2 (Integrator) to brief prior-work paragraph
- Collapse Pass 1 case details into summary table
- Remove strikethrough/removed-step references (A2, node_max_override)
- Add Section 6.1: external validation (Yushan's NA mass conservation check)
- Update Section 7: remove resolved topology metadata issues
- Trim Appendix: remove superseded pipeline file listings
- Regenerate figures and commit to docs/technical/figures/
- Update image paths from ../../output/ to relative figures/
- Correct OC region counts and correction type totals to match JSONs

--- a/.gitignore
+++ b/.gitignore
@@ -207,6 +207,7 @@ src/_legacy/updates/delta_updates/testing.py
 
 # Project-specific ignores
 *.png
+!docs/technical/figures/*.png
 outputs/
 test_*.py
 !tests/**/test_*.py
